# aws-scripts

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
awsscripts/: accounts.py  ec2.py
awsscripts/ec2/: ec2.py
awsscripts/emr/: configurations.py  emr.py
awsscripts/emr/helpers/: aws_accounts.py  emr.py  spark.py
awsscripts/emr/scripts/: codeartifact.py  emr_is_idle.py  emr_start.py  emr_submit_spark.py  emr_terminate.py
awsscripts/helpers/: accounts.py  emr.py  spark.py  templates.py
awsscripts/scripts/: accounts.py  aws_accounts.py  awss.py  ca_login.py  ca_logout.py  codeartifact.py  emr_is_idle.py  emr_isidle.py  emr_start.py  emr_submit.py  emr_submit_spark.py  emr_terminate.py  mwaa.py  mwaa_cli.py  sketches.py
awsscripts/sketches/: ca.py  emr.py  mwaa.py  sketches.py  sketchitem.py
awsscripts/templates/: code_artifact.py  emr_template.py  template.py
