[metadata]
name = aws-scripts
author = Peter JakubÄo
author_email = pjakubco@gmail.com
description = AWSome Scripts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vbmacher/aws-scripts
project_urls =
    Bug Tracker = https://github.com/vbmacher/aws-scripts/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Private
    Operating System :: OS Independent
    Intended Audience :: Developers

[files]
packages =
    awsscripts

[entry_points]
console_scripts =
    awss=awsscripts.scripts.awss:main
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain
    fancy = pbr.cfg.driver:Fancy

[flake8]
max_line_length = 120

[mypy]
python_version = 3.7
cache_dir = /dev/null
ignore_missing_imports = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True
disallow_any_generics = True
disallow_subclassing_any = True
warn_return_any = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_unused_configs = True

[pbr]
skip_changelog = True
skip_authors = True
skip_reno = True

[options]
packages =
    awsscripts
python_requires = >=3.7

[bdist_wheel]
universal = 0
